about page design started and blog post page design progress

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,3 +16,9 @@ header.top-nav .hero-banner {
     max-height: 340px;
     min-height: 200px
 }
+
+header.top-nav .hero-banner h2 {
+    font-weight: lighter;
+    font-size: 1.1rem;
+    color: wheat;
+}
