--- a/src/components/blog-post-card/blog-post-card.css
+++ b/src/components/blog-post-card/blog-post-card.css
@@ -7,6 +7,7 @@
 
 .blog-post-card img.post-thumbnail {
     border-radius:  var(--card-radius) var(--card-radius) 0 0;
+    max-height: 277px;
 }
 
 .blog-post-card h2 {
