featured image embeding completed

--- a/src/templates/blog-post/blog-post.css
+++ b/src/templates/blog-post/blog-post.css
@@ -2,6 +2,10 @@
     font-size: 2rem;
 }
 
+.blog-post .featured-image.native-image {
+    max-height: 500px;
+}
+
 @media only screen and (min-width: 500px) {
     .blog-post header h1 {
         font-size: 4rem;
