--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,16 @@
 :root {
     --bs-font-sans-serif: 'Noto Sans';
-
     /* header */
     --app-topnav-bg: black;
+    --app-footer-bg: black;
+}
+
+html, body, #___gatsby, #gatsby-focus-wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
