--- a/src/components/blog-post-card/blog-post-card.module.css
+++ b/src/components/blog-post-card/blog-post-card.module.css
@@ -1,18 +1,22 @@
-.blog-post-card {
+.blogPostCard {
     --card-radius: 4px;
     border-radius: var(--card-radius);
     background-color: #fff;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0,0,0,.12);
 }
 
-.blog-post-card .thumbnail-container {
+.blogPostCard :global(.thumbnail-container) {
     height: 250px;
 }
 
-.blog-post-card .post-thumbnail {
+.blogPostCard :global(.post-thumbnail) {
     border-radius:  var(--card-radius) var(--card-radius) 0 0;
 }
 
-.blog-post-card h2 {
+.blogPostCard :global(.post-thumbnail):not([src$=".svg"]) {
+    object-fit: cover;
+}
+
+.blogPostCard h2 {
     font-size: 1.5rem;
 }
